# fcc

./: .dockerignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pre-commit.yml
data-analysis/: README.md
data-analysis/demographic-data-analyzer/: demographic_data_analyzer.py  exploration.ipynb  main.py
data-analysis/mean-variance-standard-deviation-calculator/: main.py  mean_var_std.py
data-analysis/medical-data-visualizer/: main.py  medical_data_visualizer.py  test_module.py
data-analysis/page-view-time-series-visualizer/: main.py  test_module.py  time_series_visualizer.py
data-analysis/sea-level-predictor/: main.py  sea_level_predictor.py  test_module.py
data-visualization/: README.md
machine-learning/: README.md
scientific-computing/: README.md
scientific-computing/arithmetic-formatter/: arithmetic_arranger.py
scientific-computing/budget-app/: README.md  budget.py
scientific-computing/polygon-area-calculator/: shape_calculator.py
scientific-computing/probability-calculator/: README.md  main.py  prob_calculator.py
scientific-computing/time-calculator/: time_calculator.py
