[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "fcc"
version = "0.1.0.20210327"
description = ""
authors = ["Your Name <you@example.com>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.20.2"
pandas = "^1.2.3"
scipy = "^1.6.2"
seaborn = "^0.11.1"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
#flake8 = "^3.8.4"
#isort = "^5.7.0"
#black = "^20.8b1"
#docformatter = "^1.4"
#mypy = "^0.812"
#pre-commit = "^2.9.3"
#flake8-annotations = "^2.5.0"
#flake8-bandit = "^2.1.2"
#flake8-bugbear = "^20.11.1"
#flake8-builtins = "^1.5.3"
#flake8-docstrings = "^1.5.0"
#flake8-plugin-utils = "^1.3.1"
#flake8-polyfill = "^1.0.2"
#flake8-return = "^1.1.2"

[tool.black]
line-length = 100
target_version = ["py38"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
