[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.black]
line-length = 100
target_version = ["py39"]

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, B001, W503, ANN002, ANN003, ANN101, ANN102, D100, D101, R504"
per-file-ignores = "tests/test_*:D, ANN2, */__init__.py:D104"
exclude = ".git, __pycache__, .mypy_cache, .pytest_cache, .venv, .cache"
docstring-convention = "google"
mypy-init-return = "true"
count = "true"
min_python_version = "3.9.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
profile = "black"

[tool.mypy]
python_version = 3.9
cache_dir = "/dev/null"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
local_partial_types = true

[tool.poetry]
name = "fcc"
version = "0.1.0"
description = "projects for freeCodeCamp Python courses"
authors = ["quassy <quassy@users.noreply.github.com>"]
license = "Copyright 2021 quassy"

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.3"
pandas = "^1.4.1"
scipy = "^1.7.3"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
